# overleaf_fs

./: .readthedocs.yaml  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build_desktop_binaries.yml  publish.yml
assets/: OverleafFS.icns
dev_scripts/: build_docs.sh  build_mac_app.sh  clean_install_all.sh
docs/: Makefile
docs/source/: conf.py  credits.rst  dev_maintenance.rst  dev_overview.rst  features.rst  index.rst  install.rst  overview.rst  quick_start.rst
overleaf_fs/: __init__.py
overleaf_fs/core/: config.py  directory_structure_store.py  metadata_store.py  models.py  overleaf_scraper.py  profiles.py  project_index.py
overleaf_fs/gui/: main_window.py  overleaf_login.py  profile_manager.py  project_table_model.py  project_tree.py
tests/manual/: test_external_change.py
