[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overleaf_fs"
version = "0.1.1"
description = "GUI-based project organization for Overleaf"
keywords = ["overleaf", "file system"]
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Greg Buzzard", email = "buzzard@purdue.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.7",
    "requests",
    "bs4"
]

[project.optional-dependencies]
test = ["pytest"]
docs = [
     "sphinx",
     "sphinxcontrib-bibtex",
     "sphinx-book-theme>=1.0.1",
     "sphinx-design",
     "sphinx-copybutton"
]
dev = [
    "build"
]

[tool.setuptools.packages]
find = {}

[project.urls]
source = "https://github.com/gbuzzard/overleaf_fs"

[project.scripts]
overleaf-fs = "overleaf_fs.gui.main_window:main"
